--- a/Week2/Week2 Homework.ipynb
+++ b/Week2/Week2 Homework.ipynb
@@ -1147,19 +1147,7 @@
    "execution_count": 36,
    "id": "c270693f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [36], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m df_train_val \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(frames)\n\u001b[1;32m     16\u001b[0m df_train_val \u001b[38;5;241m=\u001b[39m df_train_val\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 17\u001b[0m test_df \u001b[38;5;241m=\u001b[39m \u001b[43mdf_test\u001b[49m\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     19\u001b[0m y_train_val_orig \u001b[38;5;241m=\u001b[39m df_train_val\u001b[38;5;241m.\u001b[39mmedian_house_value\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m     20\u001b[0m y_test_orig \u001b[38;5;241m=\u001b[39m test_df\u001b[38;5;241m.\u001b[39mmedian_house_value\u001b[38;5;241m.\u001b[39mvalues\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_test' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = 9\n",
     "\n",
@@ -1186,20 +1174,31 @@
     "y_test = np.log1p(y_test_orig)\n",
     "\n",
     "del df_train_val['median_house_value']\n",
-    "del df_test['median_house_value']"
+    "del test_df['median_house_value']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "fc5d06af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_null_train_val = prepare_features(df_train_val, fillna_value=0)\n",
     "w_0_train_val, w_train_val = train_linear_regression_reg(X_null_train_val, y_train_val, r=0.001)\n",
     "\n",
-    "X_null_test = prepare_features(df_test, fillna_value=0)\n",
+    "X_null_test = prepare_features(test_df, fillna_value=0)\n",
     "y_null_pred_test = w_0_train_val + X_null_test.dot(w_train_val)\n",
     "\n",
     "np.round(rmse(y_test, y_null_pred_test),2)"
